Improved maven build process